finished scss version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <!-- My Css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.min.css">
     <!-- End of css -->
 
 
